[gd_scene load_steps=4 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/fonts/dynamic/h1_font.tres" type="DynamicFont" id=3]

[node name="Control" type="CenterContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 250, 150 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 262.0
margin_top = 150.0
margin_right = 762.0
margin_bottom = 450.0
rect_min_size = Vector2( 500, 300 )
rect_pivot_offset = Vector2( 250, 150 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_right = 500.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_right = 500.0
margin_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = ExtResource( 3 )
text = "Minesweeper"
align = 1
valign = 1

[node name="GridContainer" type="GridContainer" parent="Panel/VBoxContainer"]
margin_top = 152.0
margin_right = 500.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="button9x9" type="Button" parent="Panel/VBoxContainer/GridContainer"]
margin_right = 248.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "9x9"

[node name="button15x15" type="Button" parent="Panel/VBoxContainer/GridContainer"]
margin_left = 252.0
margin_right = 500.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "15x15"

[node name="button24x24" type="Button" parent="Panel/VBoxContainer/GridContainer"]
margin_top = 76.0
margin_right = 248.0
margin_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "24x24"

[node name="buttoncustom" type="Button" parent="Panel/VBoxContainer/GridContainer"]
margin_left = 252.0
margin_top = 76.0
margin_right = 500.0
margin_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Custom"

[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/button9x9" to="." method="_on_button9x9_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/button15x15" to="." method="_on_button15x15_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/button24x24" to="." method="_on_button24x24_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/buttoncustom" to="." method="_on_buttoncustom_pressed"]
